# soundsense-nlp

./: .gitignore  README.md  pyproject.toml
src/soundsense/api/: __init__.py
tests/: __init__.py
