[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundsense-nlp"
version = "0.0.0"
description = "A weakly supervised NLP system that infers acoustic accessibility signals from reviews."
authors = [{name = "chrissab-dev"}]
requires-python = ">=3.12.4"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}

# Add dependencies as you install them
# Example: fastapi>=0.100.0
dependencies = [
    "ollama>=0.6.1",
    "tesseract>=0.1.3"
]

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.setuptools]
packages = ["soundsense_nlp"]

[tool.setuptools.package-dir]
"" = "src"